[package]
name = "dprint-python-bridge"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
name = "dprint_python_bridge"
crate-type = ["cdylib"]

[dependencies]
dprint-plugin-typescript = "0.67.0"
serde_json = "1.0.59"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.15.1"